--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,16 @@ targetCompatibility = 1.8
 dependencies {
     // The production code uses the SLF4J logging API at compile time
     compile 'org.slf4j:slf4j-api:1.7.21'
+    
     // https://mvnrepository.com/artifact/com.rabbitmq/amqp-client
 	compile group: 'com.rabbitmq', name: 'amqp-client', version: '3.6.5'
+	
+	// https://mvnrepository.com/artifact/org.influxdb/influxdb-java
+	compile group: 'org.influxdb', name: 'influxdb-java', version: '2.3'
+	
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.3'
+	
 
     // Declare the dependency for your favourite test framework you want to use in your tests.
     // TestNG is also supported by the Gradle Test task. Just change the
