--- a/team_sensor/.gitignore
+++ b/team_sensor/.gitignore
@@ -16,6 +16,7 @@ Thumbs.db
 #
 # Mac OS X
 .DS_Store
+**/.DS_Store
 
 
 # exclude just everything - only the wanted stuff is included afterwards by !....
