added location service. beacon informations are now send via communicator

--- a/team_sensor/.gitignore
+++ b/team_sensor/.gitignore
@@ -5,7 +5,7 @@
 ### own ignores:
 
 pi_python/.idea
-
+pi_python/__pycache__
 
 # Created by https://www.gitignore.io/api/oy,macos,windows,linux,pycharm,eclipse,xcode
 
