--- a/middleware/build.gradle
+++ b/middleware/build.gradle
@@ -14,7 +14,8 @@ plugins{
 //         identity = file("${System.properties['user.home']}/.ssh/id_rsa")
 //     }
 // }
-apply from: "remotes"
+if (file('remotes').exists())
+	apply from: "remotes"
 
 // In this section you declare where to find the dependencies of your project
 repositories {
