--- a/middleware/build.gradle
+++ b/middleware/build.gradle
@@ -59,7 +59,9 @@ dependencies {
     // testCompile 'junit:junit:4.12'
     
 }
-
+task wrapper(type: Wrapper) {
+    gradleVersion = '3.1'
+}
 
 task showPlatformVersion << {
     println ssh.version
