--- a/database/package.json
+++ b/database/package.json
@@ -32,13 +32,14 @@
     "rxjs": "5.0.0-beta.12",
     "socket.io-client": "^1.5.0",
     "systemjs": "0.19.39",
+    "typings": "^1.5.0",
     "zone.js": "^0.6.25"
   },
   "devDependencies": {
-   "@types/core-js": "^0.9.34",
-   "@types/node": "^6.0.45",
-   "concurrently": "^3.0.0",
-   "lite-server": "^2.2.2",
-   "typescript": "^2.0.3"
- }
+    "@types/core-js": "^0.9.34",
+    "@types/node": "^6.0.45",
+    "concurrently": "^3.0.0",
+    "lite-server": "^2.2.2",
+    "typescript": "^2.0.3"
+  }
 }
