--- a/middleware/build.gradle
+++ b/middleware/build.gradle
@@ -50,7 +50,12 @@ dependencies {
 	compile group: 'org.influxdb', name: 'influxdb-java', version: '2.3'
 	
 	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
-	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.3'
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.5'
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.8.5'
+	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations
+	compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.5'
+	
 	
 	
 	// https://mvnrepository.com/artifact/org.twitter4j/twitter4j-core
