removed logging and addet comments

--- a/gameController/leonardo_firmware/platformio.ini
+++ b/gameController/leonardo_firmware/platformio.ini
@@ -11,6 +11,7 @@
 platform=atmelavr
 board=leonardo
 framework=arduino
+upload_port = COM16
 
 [platformio]
 lib_dir=C:\Users\lukas_luehr\Desktop\Semester5\pro\conrollerSVN\SmartChair\gameController\leonardo_firmware
