--- a/middleware/build.gradle
+++ b/middleware/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     
     // https://mvnrepository.com/artifact/com.ullink.slack/simpleslackapi
 	compile group: 'com.ullink.slack', name: 'simpleslackapi', version: '0.6.0'
+	
+	//
+	compile group: 'org.nanohttpd', name: 'nanohttpd', version: '2.2.0'
 
 }
 task wrapper(type: Wrapper) {
